[workspace]
members = [
    ".",
    "slippy-map/tile-cache",
]

[package]
name = "pothole-detection-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-utils = "0.2.0"
leaflet = "0.2.2"
log = "0.4.20"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"
web-sys = "0.3.64"
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
