[workspace]
members = [
    ".",
    "slippy-map/tile-cache",
]

[package]
name = "pothole-detection-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-utils = "0.2.0"
leaflet = "0.2.2"
log = "0.4.20"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"
web-sys = "0.3.64"
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
common_data = { path = "backend/common_data" }
frontend_requests = { path = "backend/frontend_requests" }
anyhow = "1.0.75"
